@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.videang" name="Videa Next Generation" version="1.0.7" provider-name="vargalex">
+<addon id="plugin.video.videang" name="Videa Next Generation" version="1.0.8" provider-name="vargalex">
 	<extension point="xbmc.python.pluginsource" library="default.py">
 		<provides>video</provides>
 	</extension>
@@ -9,7 +9,8 @@
 		<language>hu</language>
 		<platform>all</platform>
 		<news>
-			- Keresési eredmény lapozásának javítása
+			- Felirat letöltés megvalósítása (beállításokban kapcsolható)
+			- Közvetlen URL lejátszása
 		</news>
 		<assets>
 		  <icon>icon.png</icon>
